[gd_scene load_steps=9 format=3 uid="uid://cs6y8btdpwblb"]

[ext_resource type="Script" uid="uid://djkhurq5qk30f" path="res://menu.gd" id="1_lti8b"]
[ext_resource type="Texture2D" uid="uid://blg67gg5afvfk" path="res://assets/sprites/ui/Menu/persona B.png" id="2_ouk20"]
[ext_resource type="Texture2D" uid="uid://dwih0cv8cpup0" path="res://assets/sprites/ui/Menu/estad√≠sticaB.png" id="3_4hy44"]
[ext_resource type="Texture2D" uid="uid://bg43svc84f1m" path="res://assets/sprites/ui/Menu/libroM.png" id="4_ytr4m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vsb4k"]
bg_color = Color(0.133333, 0.156863, 0.211765, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mae5d"]
texture = ExtResource("2_ouk20")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l48gv"]
texture = ExtResource("3_4hy44")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ecwwl"]
texture = ExtResource("4_ytr4m")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lti8b")

[node name="MenuBar" type="MenuBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.003
anchor_bottom = 0.159
offset_left = -1.0
offset_top = 1181.0
offset_right = -0.160034
offset_bottom = 1076.48
theme_override_styles/normal = SubResource("StyleBoxFlat_vsb4k")

[node name="ColorRect" type="ColorRect" parent="MenuBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0955429, 0.114455, 0.158598, 1)

[node name="perfil" type="Button" parent="."]
layout_mode = 0
offset_left = 495.0
offset_top = 1190.0
offset_right = 577.0
offset_bottom = 1270.0
theme_override_styles/normal = SubResource("StyleBoxTexture_mae5d")

[node name="estadistica" type="Button" parent="."]
layout_mode = 0
offset_left = 151.0
offset_top = 1196.0
offset_right = 221.0
offset_bottom = 1264.0
theme_override_styles/normal = SubResource("StyleBoxTexture_l48gv")

[node name="leccion" type="Button" parent="."]
layout_mode = 0
offset_left = 302.0
offset_top = 1180.0
offset_right = 414.0
offset_bottom = 1291.0
theme_override_styles/normal = SubResource("StyleBoxTexture_ecwwl")

[connection signal="pressed" from="perfil" to="." method="_on_perfil_pressed"]
[connection signal="pressed" from="estadistica" to="." method="_on_estadistica_pressed"]
[connection signal="pressed" from="leccion" to="." method="_on_leccion_pressed"]
